--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "carousel-vue",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": false,
-  "main": "src/index.js",
+  "main": "dist/carousel.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-bundle": "vue-cli-service build --target lib --name carousel ./src/index.js"
   },
   "dependencies": {
+    "carousel-vue": "^0.1.3",
     "vue": "^2.5.16"
   },
   "repository": {
